<resources>
    <string name="app_name">Gym stats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Статистика</string>
    <string name="nav_header_subtitle">asocil@mail.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="login">Вход</string>
    <string name="registr">Регистрация</string>
    <string name="qwerty">qwerty</string>
    <string name="test_mail_ru">test@mail.ru</string>
    <string name="addWorkoutInfo">Add workout Information</string>
    <string name="workoutInfo">set workout</string>
    <string name="numberOfRepeat">number of repeat</string>
    <string name="set_count">set count</string>
    <string name="set_weight">set weight</string>
    <string name="body_Weight">set body Weight</string>
    <string name="save_text">save</string>
    <string name="password_text">password</string>
    <string name="email_text">email</string>
    <string name="todo">TODO</string>
    <string name="show_calendar">show_calendar</string>
    <string name="number_of_repeat">number of repeat</string>

    <string-array name="WorkoutTypeList">
        <item>weight</item>
        <item>Type1</item>
        <item>Type2</item>
        <item>Type3</item>
    </string-array>
</resources>