<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_cardview"
    style="@style/Base.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0">

    <LinearLayout

        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/base_cardview"
            tools:context=".ui.home.HomeFragment">

            <ImageButton
                android:id="@+id/arrow_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/show_calendar"
                android:minHeight="48dp"
                android:src="@android:drawable/ic_menu_month"
                app:layout_constraintEnd_toEndOf="@id/hidden_view"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/hidden_view"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:id="@+id/hidden_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/arrow_button">

                <CalendarView
                    android:id="@+id/calendarWorkout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <!--</LinearLayout>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bodyWeightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/body_Weight">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bodyWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save_text"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addingWorkoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="15dp"
                android:src="@drawable/ic_add"
                app:tint="@color/white"
                tools:ignore="SpeakableTextPresentCheck"
                android:contentDescription="@string/todo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
